%%{init: {"er": {"nodeSpacing": 26, "rankSpacing": 34, "minEntityHeight": 34, "minEntityWidth": 78, "entityPadding": 7, "diagramPadding": 4}}}%%
erDiagram
    direction LR
    filiale ||--o{ kundenbestellung : ""
    kunde |o--o{ kundenbestellung : ""
    mitarbeiter |o--o{ kundenbestellung : "kassiert"
    zahlungsart ||--o{ kundenbestellung : ""
    promotion |o--o{ kundenbestellung : ""
    kundenbestellung ||--|{ bestellposition : ""
    artikel ||--o{ bestellposition : ""
    kundenbestellung {
        int bestellung_id PK
        date bestelldatum
        time bestellzeit
        string bestellkanal "Counter, Drive, Kiosk, App"
        int artikel_anzahl
        decimal brutto_gesamt
        decimal rabatt_betrag
        decimal netto_gesamt
        int bestelldauer_min
        decimal zufriedenheit "1 bis 5, optional"
    }
    bestellposition {
        int position_id PK
        int menge
        decimal einzelpreis
        decimal positionsbetrag
    }
